# ROS2-Thermal-and-RGBD-sensors_ws

src/Mediciones/Continuo/: 02072025_solar_opaque.csv  02072025_solar_semi.csv  Mediciones_NDVI_continuo_04-07-2025, 11_54_08.csv  Mediciones_NDVI_continuo_04-07-2025, 12_06_04.csv  Mediciones_NDVI_continuo_10-07-2025, 09_16_47.csv  Mediciones_NDVI_continuo_10-07-2025, 09_28_01.csv  Mediciones_NDVI_continuo_10-07-2025, 09_48_57.csv  Mediciones_NDVI_continuo_10-07-2025, 10_09_37.csv  Mediciones_NDVI_continuo_10-07-2025, 10_40_28.csv  Mediciones_NDVI_continuo_10-07-2025, 10_48_21.csv  Mediciones_NDVI_continuo_10-07-2025, 11_12_49.csv  Mediciones_NDVI_continuo_10-07-2025, 11_31_25.csv  Mediciones_NDVI_continuo_10-07-2025, 11_37_21.csv  Mediciones_NDVI_continuo_10-07-2025, 11_41_52.csv  Mediciones_NDVI_continuo_15-07-2025, 08_40_26.csv  Mediciones_NDVI_continuo_15-07-2025, 09_04_27.csv  Mediciones_NDVI_continuo_15-07-2025, 09_28_45.csv  Mediciones_NDVI_continuo_15-07-2025, 10_55_38.csv  Mediciones_NDVI_continuo_openarea.csv  Mediciones_NDVI_continuo_solar_opaque.csv  Mediciones_NDVI_continuo_solar_semi.csv  ndvi_02072025_openarea.csv
src/Mediciones/Continuo/26-06-2025/: Mediciones_NDVI_continuo_26-06-2025, 18_19_14.csv  (+6 more)
src/custom_nodes/launch/: APP.py
src/custom_nodes/scripts/: GPS_coordinates_node.py  ros2_mqtt_publisher.py  temperature_cswi_calculation.py
src/ndvi_cam/: package.xml  setup.cfg  setup.py
src/ndvi_cam/ndvi_cam/: calibracion.py  proces_discontinuous.py  proceso_continuo.py
src/ndvi_msgs/: CMakeLists.txt  package.xml
src/ndvi_msgs/msg/: NDVI.msg
(+13 files in other folders)
