<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ndvi_cam</name>
  <version>0.0.0</version>
  <description>This package has the nodes in charge of NDVI sensor to Camera processing.</description>
  <author email="victorlucasguillen@gmail.com">Victor Lucas Guillén</author>
  <maintainer email="victorlucasguillen@gmail.com">Victor Lucas Guillén</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>pyserial</depend>
  <depend>serial</depend>
  <depend>cv2</depend>
  <depend>cv_bridge</depend>
  <depend>os</depend>
  <depend>pandas</depend>
  <depend>datetime</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
